--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@ body {
 }
 
 /* Titre PNG */
-.titre {
+.titre{
   position: absolute;
-  top: 0px; /* ajuste ici si besoin */
+  top: 0;
   left: 50%;
-  transform: translateX(-50%);
-  width: 100%; /* ajuste taille ici */
+  width: 90%;
   max-width: 800px;
+  transform: translateX(-50%) translateY(-60px); /* <- monte vraiment */
 }
+
 </style>
 </head>
 
