--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@ body {
   <div class="grid">
   <a href="entretien.html"><img src="entretien.png"></a>
   <a href="documents.html"><img src="documents.png"></a>
-  <a href="organisation.html"><img src="organisation.png"></a>
+  <a href="organisation.html"><img src="organigramme.png"></a>
   <a href="#"><img src="informations.png"></a>
   <a href="#"><img src="planning.png"></a>
-  <a href="#"><img src="galerie.png"></a>
   <a href="#"><img src="admin.png"></a>
 </div>
 
