--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ html, body {
 }
 
 body {
-  background: url("background.jpg") no-repeat center top;
+  background: url("background.png") no-repeat center top;
   background-size: cover;
   position: relative;
 }
