--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ body {
   <a href="organisation.html"><img src="organigramme.png"></a>
   <a href="#"><img src="informations.png"></a>
   <a href="#"><img src="planning.png"></a>
-  <a href="#"><img src="admin.png"></a>
+  <a href="#"><img src="equipes.png"></a>
 </div>
 
 
