--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@ body {
 </head>
 
 <body>
+  <div class="header-title">
+    <img src="images/titre.png" alt="Bienvenue sur CS Consenvoye">
+</div>
+
 
 <img src="titre.png" class="titre">
   <div class="grid">
