--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  height: 100%;
+  height: 100vh;
 }
 
 body {
@@ -50,9 +50,6 @@ body {
     <img src="images/titre.png" alt="Bienvenue sur CS Consenvoye">
 </div>
 
-
-<img src="titre.png" class="titre">
-  <div class="grid">
   <a href="entretien.html"><img src="entretien.png"></a>
   <a href="documents.html"><img src="documents.png"></a>
   <a href="organisation.html"><img src="organigramme.png"></a>
