--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@ body {
     <img src="images/titre.png" alt="Bienvenue sur CS Consenvoye">
 </div>
 
+  img src="titre.png" class="titre">
+  <div class="grid">
   <a href="entretien.html"><img src="entretien.png"></a>
   <a href="documents.html"><img src="documents.png"></a>
   <a href="organisation.html"><img src="organigramme.png"></a>
