--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ body {
   <a href="entretien.html"><img src="entretien.png"></a>
   <a href="documents.html"><img src="documents.png"></a>
   <a href="organisation.html"><img src="organigramme.png"></a>
-  <a href="#"><img src="informations.png"></a>
+  <a href="informations.html"><img src="informations.png"></a>
   <a href="#"><img src="planning.png"></a>
   <a href="#"><img src="equipes.png"></a>
   <a href="#"><img src="book.png"></a>
