--- a/index.html
+++ b/index.html
@@ -46,21 +46,17 @@ body {
 </head>
 
 <body>
-  <div class="header-title">
-    <img src="images/titre.png" alt="Bienvenue sur CS Consenvoye">
-</div>
+  <img src="images/titre.png" alt="Bienvenue sur CS Consenvoye" class="titre">
 
-  img src="titre.png" class="titre">
   <div class="grid">
-  <a href="entretien.html"><img src="entretien.png"></a>
-  <a href="documents.html"><img src="documents.png"></a>
-  <a href="organisation.html"><img src="organigramme.png"></a>
-  <a href="informations.html"><img src="informations.png"></a>
-  <a href="#"><img src="planning.png"></a>
-  <a href="#"><img src="equipes.png"></a>
-  <a href="#"><img src="book.png"></a>
-</div>
-
-
+    <a href="entretien.html"><img src="entretien.png" alt="Entretien"></a>
+    <a href="documents.html"><img src="documents.png" alt="Documents"></a>
+    <a href="organisation.html"><img src="organigramme.png" alt="Organigramme"></a>
+    <a href="informations.html"><img src="informations.png" alt="Informations"></a>
+    <a href="#"><img src="planning.png" alt="Planning"></a>
+    <a href="#"><img src="equipes.png" alt="Équipes"></a>
+    <a href="#"><img src="book.png" alt="Book"></a>
+  </div>
 </body>
+
 </html>
