--- a/index.html
+++ b/index.html
@@ -4,59 +4,69 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<title>CS Consenvoye</title>
+
 <style>
 html, body {
   margin: 0;
   padding: 0;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 body {
-  background: url("background.png") no-repeat center top;
+  background: url("background.png") no-repeat center center;
   background-size: cover;
-  position: relative;
+  background-attachment: fixed;
+  font-family: Arial, sans-serif;
 }
 
-/* Titre PNG */
-.titre{
-  position: absolute;
-  top: 0;
-  left: 50%;
-  width: 100%;
+/* Titre */
+.titre {
+  display: block;
+  margin: 40px auto 20px auto;
+  width: 90%;
   max-width: 800px;
-  transform: translateX(-50%) translateY(-60px); /* <- monte vraiment */
 }
+
 /* Grille icônes */
 .grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
+  gap: 25px;
   padding: 20px;
-  margin-top: 180px; /* espace sous le titre */
+  max-width: 500px;
+  margin: 0 auto 60px auto;
 }
 
 .grid img {
   width: 100%;
   max-width: 170px;
-  margin: auto;
   display: block;
+  margin: auto;
+  transition: transform 0.2s ease;
 }
 
+.grid img:hover {
+  transform: scale(1.05);
+}
 </style>
 </head>
 
 <body>
-  <img src="images/titre.png" alt="Bienvenue sur CS Consenvoye" class="titre">
 
-  <div class="grid">
-    <a href="entretien.html"><img src="entretien.png" alt="Entretien"></a>
-    <a href="documents.html"><img src="documents.png" alt="Documents"></a>
-    <a href="organisation.html"><img src="organigramme.png" alt="Organigramme"></a>
-    <a href="informations.html"><img src="informations.png" alt="Informations"></a>
-    <a href="#"><img src="planning.png" alt="Planning"></a>
-    <a href="#"><img src="equipes.png" alt="Équipes"></a>
-    <a href="#"><img src="book.png" alt="Book"></a>
-  </div>
+<!-- Titre -->
+<img src="titre.png" class="titre">
+
+<!-- Grille -->
+<div class="grid">
+  <a href="entretien.html"><img src="entretien.png"></a>
+  <a href="documents.html"><img src="documents.png"></a>
+  <a href="organisation.html"><img src="organigramme.png"></a>
+  <a href="informations.html"><img src="informations.png"></a>
+  <a href="#"><img src="planning.png"></a>
+  <a href="#"><img src="equipes.png"></a>
+  <a href="#"><img src="book.png"></a>
+</div>
+
 </body>
-
 </html>
