--- a/index.html
+++ b/index.html
@@ -1,72 +1,126 @@
 <!doctype html>
 <html lang="fr">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>CS Consenvoye</title>
 
 <style>
-html, body {
-  margin: 0;
-  padding: 0;
-  min-height: 100vh;
-}
+  :root{
+    --header-h: 160px; /* hauteur du bandeau titre */
+    --max-title: 900px; /* largeur max du titre */
+    --grid-max: 520px; /* largeur max de la grille */
+    --icon-max: 185px; /* taille max icônes */
+    --gap: 26px; /* espace entre boutons */
+  }
 
-body {
-  background: url("background.png") no-repeat center center;
-  background-size: cover;
-  background-attachment: fixed;
-  font-family: Arial, sans-serif;
-}
+  * { box-sizing: border-box; }
 
-/* Titre */
-.titre {
-  display: block;
-  margin: 40px auto 20px auto;
-  width: 90%;
-  max-width: 800px;
-}
+  html, body {
+    margin: 0;
+    padding: 0;
+    min-height: 100%;
+  }
 
-/* Grille icônes */
-.grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 25px;
-  padding: 20px;
-  max-width: 500px;
-  margin: 0 auto 60px auto;
-}
+  /* BACKGROUND FIXE (stable sur mobile/PC) */
+  body::before{
+    content:"";
+    position: fixed;
+    inset: 0;
+    background: url("background.png") center center / cover no-repeat;
+    z-index: -1;
+    transform: translateZ(0);
+    will-change: transform;
+  }
 
-.grid img {
-  width: 100%;
-  max-width: 170px;
-  display: block;
-  margin: auto;
-  transition: transform 0.2s ease;
-}
+  /* HEADER FIXE (le titre ne descend plus au scroll) */
+  .header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: var(--header-h);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 14px 12px;
+    z-index: 10;
 
-.grid img:hover {
-  transform: scale(1.05);
-}
+    /* petit voile pour que ça reste lisible si fond clair */
+    background: linear-gradient(to bottom, rgba(0,0,0,.65), rgba(0,0,0,.0));
+    backdrop-filter: blur(2px);
+  }
+
+  .titre{
+    width: min(96vw, var(--max-title));
+    height: auto;
+    display: block;
+    filter: drop-shadow(0 10px 18px rgba(0,0,0,.55));
+  }
+
+  /* CONTENU EN DESSOUS DU HEADER */
+  .content{
+    padding-top: calc(var(--header-h) + 10px);
+    padding-bottom: 60px;
+  }
+
+  /* GRILLE */
+  .grid{
+    width: min(92vw, var(--grid-max));
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: var(--gap);
+    padding: 18px 10px;
+  }
+
+  .grid a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+  }
+
+  .grid img{
+    width: 100%;
+    max-width: var(--icon-max);
+    height: auto;
+    display: block;
+    transition: transform .18s ease;
+  }
+
+  .grid img:hover{
+    transform: scale(1.05);
+  }
+
+  /* petit ajustement mobile */
+  @media (max-width: 420px){
+    :root{
+      --header-h: 145px;
+      --icon-max: 170px;
+      --gap: 18px;
+    }
+  }
 </style>
 </head>
 
 <body>
 
-<!-- Titre -->
-<img src="titre.png" class="titre">
+  <div class="header">
+    <img src="titre.png" class="titre" alt="Bienvenue sur CS Consenvoye">
+  </div>
 
-<!-- Grille -->
-<div class="grid">
-  <a href="entretien.html"><img src="entretien.png"></a>
-  <a href="documents.html"><img src="documents.png"></a>
-  <a href="organisation.html"><img src="organigramme.png"></a>
-  <a href="informations.html"><img src="informations.png"></a>
-  <a href="#"><img src="planning.png"></a>
-  <a href="#"><img src="equipes.png"></a>
-  <a href="#"><img src="book.png"></a>
-</div>
+  <div class="content">
+    <div class="grid">
+      <a href="entretien.html"><img src="entretien.png" alt="Entretien"></a>
+      <a href="documents.html"><img src="documents.png" alt="Documents"></a>
+      <a href="organisation.html"><img src="organigramme.png" alt="Organigramme"></a>
+      <a href="informations.html"><img src="informations.png" alt="Informations"></a>
+      <a href="#"><img src="planning.png" alt="Planning"></a>
+      <a href="#"><img src="equipes.png" alt="Équipes"></a>
+      <a href="#"><img src="book.png" alt="Book"></a>
+    </div>
+  </div>
 
 </body>
 </html>
