--- a/index.html
+++ b/index.html
@@ -8,63 +8,52 @@
   <style>
     * { box-sizing: border-box; }
 
-    html, body {
-      margin: 0;
-      padding: 0;
-      min-height: 100vh;
-    }
+html, body {
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+}
 
-    /* Background stable (et scroll normal) */
-    body {
-      background: url("background.png") no-repeat center top;
-      background-size: cover;
-      background-attachment: fixed; /* si mobile bugge, on l'enlève */
-      font-family: Arial, sans-serif;
-    }
+body {
+  background: url("background.png") no-repeat center top;
+  background-size: cover;
+  background-attachment: fixed;
+  font-family: Arial, sans-serif;
+}
 
-    /* Titre (SCROLL avec la page) */
-    .header {
-      text-align: center;
-      padding: 8px 12px 0 12px; /* plus haut */
-    }
+/* HEADER */
+.header {
+  text-align: center;
+  padding-top: 30px; /* ↓ descend le titre */
+  padding-bottom: 10px;
+}
 
-    .titre {
-      width: 96%;
-      max-width: 1000px; /* plus grand */
-      height: auto;
-      display: block;
-      margin: 0 auto; /* collé en haut */
-    }
+.titre {
+  width: 92%;
+  max-width: 750px; /* ↓ un peu plus petit */
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
 
-    /* Grille boutons */
-    .grid {
-      width: min(92vw, 520px);
-      margin: 18px auto 60px auto;
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 24px;
-      padding: 10px 12px;
-    }
+/* GRILLE */
+.grid {
+  width: min(90vw, 480px);
+  margin: 30px auto 80px auto; /* ↓ espace sous le titre */
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 22px;
+}
 
-    .grid a {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-decoration: none;
-    }
+/* BOUTONS */
+.grid img {
+  width: 100%;
+  max-width: 160px; /* ↓ plus petits */
+  height: auto;
+  display: block;
+  margin: auto;
+}
 
-    .grid img {
-      width: 100%;
-      max-width: 185px;
-      height: auto;
-      display: block;
-    }
-
-    @media (max-width: 420px) {
-      .grid { gap: 18px; }
-      .grid img { max-width: 170px; }
-      .titre { max-width: 920px; }
-    }
   </style>
 </head>
 
