--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@ body {
     <a href="equipes.html"><img src="equipes.png"></a>
 
     <a href="book.html"><img src="book.png"></a>
+    <a href="book.html"><img src="galerie.png"></a>
   </div>
 </div>
 
