--- a/index.html
+++ b/index.html
@@ -1,90 +1,132 @@
 <!doctype html>
 <html lang="fr">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>CS Consenvoye</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+  <title>CS Consenvoye</title>
 
-<style>
-* { box-sizing: border-box; }
+  <style>
+    :root{
+      /* largeur utile max (tablettes/PC) */
+      --maxw: 520px;
 
-html, body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  overflow: hidden; /* PAS DE SCROLL */
-}
+      /* taille boutons (responsive) */
+      --btn: clamp(110px, 22vw, 160px);
 
-body {
-  background: url("background.png") no-repeat center center;
-  background-size: cover;
-  background-color: #000;
-}
+      /* espaces (responsive) */
+      --gap: clamp(14px, 3.2vw, 22px);
+      --pad: clamp(14px, 3.5vw, 26px);
+    }
 
-/* ===== TITRE ===== */
-.header {
-  position: fixed;
-  top: -10px; /* on remonte VRAIMENT */
-  left: 50%;
-  transform: translateX(-50%);
-  width: 92vw; /* légèrement réduit */
-  max-width: 600px; /* plus équilibré */
-  z-index: 10;
-  pointer-events: none;
-}
+    * { box-sizing: border-box; }
 
-.header img {
-  width: 100%;
-  display: block;
-}
+    html, body { height: 100%; margin: 0; }
 
-/* ===== BOUTONS ===== */
-.buttons {
-  position: fixed;
-  top: 190px; /* descend un peu sous le titre */
-  left: 50%;
-  transform: translateX(-50%);
-  width: 92vw;
-  max-width: 420px;
-}
+    body{
+      min-height: 100svh; /* mieux que 100vh sur mobile */
+      background: url("background.png") center top / cover no-repeat fixed;
+      /* si "fixed" bug sur certains Android, tu pourras l'enlever */
+      display: flex;
+      justify-content: center;
+      color: #fff;
+    }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 18px;
-  justify-items: center;
-}
+    /* zone centrée */
+    .wrap{
+      width: min(100%, var(--maxw));
+      padding: calc(env(safe-area-inset-top) + var(--pad)) var(--pad) calc(env(safe-area-inset-bottom) + var(--pad));
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: var(--gap);
+    }
 
-.grid img {
-  width: 135px; /* plus petits */
-  height: auto;
-  display: block;
-}
+    /* Titre responsive */
+    .title{
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      /* évite que la barre du navigateur “mange” le haut */
+      margin-top: clamp(6px, 1.5vh, 16px);
+    }
+    .title img{
+      width: min(100%, 520px);
+      height: auto;
+      display: block;
+      /* agrandit un peu sur mobile sans exploser */
+      transform: scale(clamp(1.00, 1.06, 1.12));
+      transform-origin: top center;
+    }
 
-</style>
+    /* Grille 2 colonnes */
+    .grid{
+      width: 100%;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: var(--gap);
+      justify-items: center;
+      align-items: center;
+      margin-top: clamp(4px, 1vh, 10px);
+    }
+
+    /* Boutons carrés toujours */
+    .btn{
+      width: var(--btn);
+      aspect-ratio: 1 / 1;
+      display: grid;
+      place-items: center;
+      text-decoration: none;
+      -webkit-tap-highlight-color: transparent;
+    }
+
+    .btn img{
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      display: block;
+      filter: drop-shadow(0 8px 18px rgba(0,0,0,.55));
+    }
+
+    /* Dernière ligne : si tu as 1 seul bouton (Book) centré */
+    .grid .span2{
+      grid-column: 1 / -1;
+    }
+
+    /* Tablettes / grands écrans: un peu plus grand */
+    @media (min-width: 700px){
+      :root{
+        --maxw: 640px;
+        --btn: clamp(140px, 18vw, 190px);
+      }
+    }
+
+    /* Si Android gère mal background-attachment: fixed, commente la ligne "fixed" plus haut */
+  </style>
 </head>
 
 <body>
+  <main class="wrap">
 
-<div class="header">
-  <img src="titre.png" alt="Bienvenue sur CS Consenvoye">
-</div>
+    <header class="title">
+      <img src="images/titre.png" alt="Bienvenue sur CS Consenvoye">
+    </header>
 
-<div class="buttons">
-  <div class="grid">
-    <a href="entretien.html"><img src="entretien.png"></a>
-    <a href="documents.html"><img src="documents.png"></a>
+    <section class="grid">
+      <a class="btn" href="entretien.html"><img src="entretien.png" alt="Entretien"></a>
+      <a class="btn" href="documents.html"><img src="documents.png" alt="Documents"></a>
 
-    <a href="organisation.html"><img src="organigramme.png"></a>
-    <a href="informations.html"><img src="informations.png"></a>
+      <a class="btn" href="organisation.html"><img src="organigramme.png" alt="Organigramme"></a>
+      <a class="btn" href="informations.html"><img src="informations.png" alt="Informations"></a>
 
-    <a href="planning.html"><img src="planning.png"></a>
-    <a href="equipes.html"><img src="equipes.png"></a>
+      <a class="btn" href="planning.html"><img src="planning.png" alt="Planning"></a>
+      <a class="btn" href="equipes.html"><img src="equipes.png" alt="Équipes"></a>
 
-    <a href="book.html"><img src="book.png"></a>
-    <a href="book.html"><img src="galerie.png"></a>
-  </div>
-</div>
+      <a class="btn span2" href="book.html"><img src="book.png" alt="Book"></a>
+      <!-- si tu veux Galerie plus tard :
+      <a class="btn span2" href="galerie.html"><img src="galerie.png" alt="Galerie"></a>
+      -->
+    </section>
 
+  </main>
 </body>
 </html>
