--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   <main class="wrap">
 
     <header class="title">
-      <img src="images/titre.png" alt="Bienvenue sur CS Consenvoye">
+      <img src="titre.png" alt="Bienvenue sur CS Consenvoye">
     </header>
 
     <section class="grid">
