--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
       <a class="btn" href="equipes.html"><img src="equipes.png" alt="Équipes"></a>
 
       <a class="btn span2" href="book.html"><img src="book.png" alt="Book"></a>
+      <a class="btn span2" href="galerie.html"><img src="galerie.png" alt="galerie"></a>
       <!-- si tu veux Galerie plus tard :
       <a class="btn span2" href="galerie.html"><img src="galerie.png" alt="Galerie"></a>
       -->
