--- a/index.html
+++ b/index.html
@@ -87,11 +87,6 @@
       filter: drop-shadow(0 8px 18px rgba(0,0,0,.55));
     }
 
-    /* Dernière ligne : si tu as 1 seul bouton (Book) centré */
-    .grid .span2{
-      grid-column: 1 / -1;
-    }
-
     /* Tablettes / grands écrans: un peu plus grand */
     @media (min-width: 700px){
       :root{
@@ -121,8 +116,8 @@
       <a class="btn" href="planning.html"><img src="planning.png" alt="Planning"></a>
       <a class="btn" href="equipes.html"><img src="equipes.png" alt="Équipes"></a>
 
-      <a class="btn span2" href="book.html"><img src="book.png" alt="Book"></a>
-      <a class="btn span2" href="galerie.html"><img src="galerie.png" alt="galerie"></a>
+      <a class="btn" href="book.html"><img src="book.png" alt="Book"></a>
+      <a class="btn" href="galerie.html"><img src="galerie.png" alt="galerie"></a>
       <!-- si tu veux Galerie plus tard :
       <a class="btn span2" href="galerie.html"><img src="galerie.png" alt="Galerie"></a>
       -->
