--- a/index.html
+++ b/index.html
@@ -7,74 +7,79 @@
 
   <style>
     :root{
-      /* largeur utile max (tablettes/PC) */
+      /* Largeur max “zone centrale” */
       --maxw: 520px;
 
-      /* taille boutons (responsive) */
-      --btn: clamp(110px, 22vw, 160px);
+      /* Taille icône : plus petit, responsive */
+      --btn: clamp(92px, 18vw, 140px);
 
-      /* espaces (responsive) */
-      --gap: clamp(14px, 3.2vw, 22px);
-      --pad: clamp(14px, 3.5vw, 26px);
+      /* Espacement */
+      --gap: clamp(12px, 3.2vw, 18px);
+
+      /* Marge haute (pour mettre le titre + haut) */
+      --titleTop: calc(env(safe-area-inset-top) + 6px);
+
+      /* Taille titre (plus gros) */
+      --titleW: min(92vw, 560px);
     }
 
-    * { box-sizing: border-box; }
-
-    html, body { height: 100%; margin: 0; }
-
-    body{
-      min-height: 100svh; /* mieux que 100vh sur mobile */
-      background: url("background.png") center top / cover no-repeat fixed;
-      /* si "fixed" bug sur certains Android, tu pourras l'enlever */
-      display: flex;
-      justify-content: center;
-      color: #fff;
+    html, body{
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      overflow: hidden; /* IMPORTANT : empêche le scroll */
+      background: #000;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     }
 
-    /* zone centrée */
+    /* Background FIXE (ne bouge jamais, meilleur que background-attachment:fixed sur Android) */
+    body::before{
+      content:"";
+      position: fixed;
+      inset: 0;
+      background: url("background.png") center top / cover no-repeat;
+      transform: translateZ(0);
+      z-index: 0;
+    }
+
+    /* Conteneur FIXE plein écran */
     .wrap{
-      width: min(100%, var(--maxw));
-      padding: calc(env(safe-area-inset-top) + var(--pad)) var(--pad) calc(env(safe-area-inset-bottom) + var(--pad));
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: var(--gap);
+      position: fixed;
+      inset: 0;
+      z-index: 1;
+      display: grid;
+      grid-template-rows: auto 1fr;
+      align-items: start;
+      justify-items: center;
+      padding-left: env(safe-area-inset-left);
+      padding-right: env(safe-area-inset-right);
     }
 
-    /* Titre responsive */
+    /* Titre FIXE */
     .title{
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      /* évite que la barre du navigateur “mange” le haut */
-      margin-top: clamp(6px, 1.5vh, 16px);
-    }
-    .title img{
-      width: min(100%, 520px);
-      height: auto;
+      margin-top: var(--titleTop);
+      width: var(--titleW);
       display: block;
-      /* agrandit un peu sur mobile sans exploser */
-      transform: scale(clamp(1.00, 1.06, 1.12));
-      transform-origin: top center;
+      height: auto;
+      pointer-events: none; /* évite les clics dessus */
+      user-select: none;
     }
 
-    /* Grille 2 colonnes */
+    /* Zone des boutons (reste visible, pas de scroll) */
     .grid{
-      width: 100%;
+      width: min(92vw, var(--maxw));
+      margin-top: clamp(10px, 2.2vw, 18px);
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       gap: var(--gap);
+      align-content: start;
       justify-items: center;
-      align-items: center;
-      margin-top: clamp(4px, 1vh, 10px);
     }
 
-    /* Boutons carrés toujours */
     .btn{
       width: var(--btn);
-      aspect-ratio: 1 / 1;
-      display: grid;
-      place-items: center;
+      height: var(--btn);
+      display: block;
       text-decoration: none;
       -webkit-tap-highlight-color: transparent;
     }
@@ -84,29 +89,34 @@
       height: 100%;
       object-fit: contain;
       display: block;
-      filter: drop-shadow(0 8px 18px rgba(0,0,0,.55));
+      /* PAS DE HALO : rien ici */
     }
 
-    /* Tablettes / grands écrans: un peu plus grand */
+    /* Tablettes / grands écrans : un peu plus grand */
     @media (min-width: 700px){
       :root{
+        --btn: clamp(110px, 14vw, 170px);
         --maxw: 640px;
-        --btn: clamp(140px, 18vw, 190px);
+        --titleW: min(85vw, 650px);
       }
     }
 
-    /* Si Android gère mal background-attachment: fixed, commente la ligne "fixed" plus haut */
+    /* Petits écrans très bas : réduire un poil */
+    @media (max-height: 720px){
+      :root{
+        --btn: clamp(84px, 18vw, 125px);
+      }
+    }
   </style>
 </head>
 
 <body>
   <main class="wrap">
+    <!-- Titre (FIXE) -->
+    <img class="title" src="titre.png" alt="Bienvenue sur CS Consenvoye">
 
-    <header class="title">
-      <img src="titre.png" alt="Bienvenue sur CS Consenvoye">
-    </header>
-
-    <section class="grid">
+    <!-- Boutons (FIXES) -->
+    <section class="grid" aria-label="Menu">
       <a class="btn" href="entretien.html"><img src="entretien.png" alt="Entretien"></a>
       <a class="btn" href="documents.html"><img src="documents.png" alt="Documents"></a>
 
@@ -117,12 +127,8 @@
       <a class="btn" href="equipes.html"><img src="equipes.png" alt="Équipes"></a>
 
       <a class="btn" href="book.html"><img src="book.png" alt="Book"></a>
-      <a class="btn" href="galerie.html"><img src="galerie.png" alt="galerie"></a>
-      <!-- si tu veux Galerie plus tard :
-      <a class="btn span2" href="galerie.html"><img src="galerie.png" alt="Galerie"></a>
-      -->
+      <a class="btn" href="galerie.html"><img src="galerie.png" alt="Galerie"></a>
     </section>
-
   </main>
 </body>
 </html>
