--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       height: 100%;
       margin: 0;
       padding: 0;
-      overflow: hidden; /* IMPORTANT : empêche le scroll */
+      overflow: auto; /* IMPORTANT : empêche le scroll */
       background: #000;
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     }
