--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ html, body{
   margin:0;
   padding:0;
   height:100%;
-  overflow:hidden; /* fixe, pas de scroll */
+  overflow:auto; /* fixe, pas de scroll */
   background:#000;
   font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
 }
